<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study Project</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Bluetooth -->
    <string name="search_discoverability">开放蓝牙设备300秒</string>
    <string name="search_bt">搜寻开放蓝牙设备&#8230;</string>
    <string name="start_server">开启本机蓝牙Socket服务器</string>
    <string name="start_connect">连接搜寻的第一个蓝牙设备服务器</string>
    <string name="send_message">发送文本</string>
    <string name="string_message">发送文本</string>
    <string name="loading_data">数据加载中&#8230;</string>
    <string name="bundler_name">Stuby Bundler Name</string>

    <!-- Bluetooth chart -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="local_service_started">启动本地服务</string>
    <string name="local_service_label">有本地消息喔!</string>

</resources>